<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ParlezVousActivity!</string>
    <string name="app_name">ParlezVous</string>
    <string name="replacement_text">Texte de remplacement</string>
    <string name="formulaire_de_connexion">Formulaire de connexion</string>
    <string name="connection_form">Formulaire de connexion</string>
    <string name="clean">Vider</string>
    <string name="send">Envoyer</string>
    <string name="username">Nom d\'utilisateur</string>
    <string name="password">Mot de passe</string>
    <string name="no_empty_fields">Les champs ne peuvent être vides.</string>
    <string name="new_txt">Nouvelle activity!</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>

</resources>